Slight refactor for SeasonDeleteServiceTest